2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SettingsPropertyValue.cs: fixed PropertyValue, default value of
	SettingsProperty should be desirialized or created

2007-01-03  Tor Lillqvist  <tml@novell.com>

	* ConfigurationSettings.cs: First try loading a bundled
	machine.config file, then try loading one from the file
	system. From #80305.

2006-12-31  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SettingsPropertyValue.cs: fixed PropertyValue property, added
	default value convertation to property type

2006-12-12  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SettingsBase.cs: implemented Item property

2006-11-09  Sebastien Pouliot  <sebastien@ximian.com>

	* ApplicationSettingsBase.cs: Add special case when dealing with 
	StringCollection in the Properties property.

2006-11-05  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* SettingsPropertyValue.cs: fixed PropertyValue property when it
	should be deserialized.

2006-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ConfigurationSettings.cs :
	  Handle <section> inside <section> as expected.
	  Fixed some ReadSections() consumers that it does _not_ consume
	  the surrounding EndElement. For now all issues I found are gone.

2006-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ConfigurationSettings.cs : another MoveToNextElement() elimination.
	  When there is another section group after "system.drawing"
	  section in the existing machine.config, it borked as if there were
	  no "system.diagnostics" section.

	  It is still buggy; prepended sectionGroup still causes the above.

2006-10-13  Atsushi Enomoto  <atsushi@ximian.com>

	* ConfigurationSettings.cs : when there is no content in
	  sectionGroup, all the following contents were incorrectly read
	  as the empty group's subsection.

2006-09-28  Andrew Skiba <andrews@mainsoft.com>

	* ConfigurationSettings.cs: add support for requirePermission
	attribute.

2006-09-28  Andrew Skiba <andrews@mainsoft.com>

	* ConfigurationSettings.cs: TARGET_JVM
