@@ -1,3 +1,7 @@
+2007-01-14  Vladimir Krasnov  <vladimirk@mainsoft.com>
+
+        * SettingsPropertyValueTest.cs: added tests for IsDirty proprty
+
 2007-01-08  Vladimir Krasnov  <vladimirk@mainsoft.com>
 
 	* SettingsPropertyValueTest.cs: added tests of default value
